force-app/main/default/objects/geopointe__Geo_Location__c/geopointe__Geo_Location__c.object-meta.xml
<CustomObject>
    <description>Holds custom address locations captured by Geopointe end users</description>
    <label>Geopointe Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Locations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>