force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__City__c.field-meta.xml
<CustomField>
    <fullName>geopointe__City__c</fullName>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>