force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__Country__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Country__c</fullName>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>