force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Folder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Folder</label>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipLabel>Geopointe Locations</relationshipLabel>
    <relationshipName>Geo_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>