force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__Latitude__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Latitude__c</fullName>
    <inlineHelpText>If you collect your own coordinates for your locations, you can put the latitude here. The system will use this location instead of the address on the record.</inlineHelpText>
    <label>Latitude</label>
    <precision>14</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>