force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>geopointe__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>