force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__State__c.field-meta.xml
<CustomField>
    <fullName>geopointe__State__c</fullName>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>