force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__Street__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>