force-app/main/default/objects/geopointe__Geo_Location__c/fields/geopointe__Temporary__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Temporary__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this is used by the system as a temporary record.  It is not intended to be saved long-term.  The system will periodically clean these records up.</inlineHelpText>
    <label>Temporary</label>
    <type>Checkbox</type>
</CustomField>