force-app/main/default/objects/geopointe__Geo_Location__c/listViews/geopointe__All_Locations.listView-meta.xml
<ListView>
    <fullName>geopointe__All_Locations</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Street__c</columns>
    <columns>geopointe__City__c</columns>
    <columns>geopointe__State__c</columns>
    <columns>geopointe__PostalCode__c</columns>
    <columns>geopointe__Country__c</columns>
    <columns>geopointe__Temporary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Locations</label>
</ListView>