force-app/main/default/objects/geopointe__Geo_Location__c/listViews/geopointe__Created_Today.listView-meta.xml
<ListView>
    <fullName>geopointe__Created_Today</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Street__c</columns>
    <columns>geopointe__City__c</columns>
    <columns>geopointe__State__c</columns>
    <columns>geopointe__PostalCode__c</columns>
    <columns>geopointe__Country__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>geopointe__Temporary__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>geopointe__Geocode__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>