force-app/main/default/objects/geopointe__Geo_Location__c/listViews/geopointe__My_Temporary_Locations.listView-meta.xml
<ListView>
    <fullName>geopointe__My_Temporary_Locations</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Street__c</columns>
    <columns>geopointe__City__c</columns>
    <columns>geopointe__State__c</columns>
    <columns>geopointe__PostalCode__c</columns>
    <columns>geopointe__Country__c</columns>
    <columns>geopointe__Temporary__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>geopointe__Temporary__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Temporary Locations</label>
</ListView>